manifests/scr/kubernetes-resources.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mock-apis-ingress
  annotations:
    app.gitlab.com/app: dbe-agreementrenew-workeragreementrenewmanagement
    app.gitlab.com/env: prod
spec:
  rules:
    - host: apis.apps.hiperion-ext-scr.tigo.com.gt
      http:
        paths:
          - path: /v1/mockapi
            pathType: Prefix
            backend:
              serviceName: mock-api-service
              servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.gitlab.com/app: dbe-agreementrenew-workeragreementrenewmanagement
    app.gitlab.com/env: prod
  labels:
    app.tigo.com.gt/application: mock-api
    app.tigo.com.gt/owner: dsd
    app.tigo.com.gt/project: digital
  name: mock-api-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.tigo.com.gt/application: mock-api
    app.tigo.com.gt/owner: dsd
    app.tigo.com.gt/project: digital
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.gitlab.com/app: dbe-agreementrenew-workeragreementrenewmanagement
    app.gitlab.com/env: prod
  labels:
    app.tigo.com.gt/application: mock-api
    app.tigo.com.gt/owner: dsd
    app.tigo.com.gt/project: digital
    app.tigo.com.gt/environment: prod
    app.tigo.com.gt/version: v1.0.0
    app.tigo.com.gt/release: stable
    app.tigo.com.gt/tier: backend
  name: mock-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.tigo.com.gt/application: mock-api
      app.tigo.com.gt/owner: dsd
      app.tigo.com.gt/project: digital
      app.tigo.com.gt/environment: prod
      app.tigo.com.gt/version: v1.0.0
      app.tigo.com.gt/release: stable
      app.tigo.com.gt/tier: backend
  template:
    metadata:
      annotations:
        app.gitlab.com/app: dbe-agreementrenew-workeragreementrenewmanagement
        app.gitlab.com/env: prod
      labels:
        app.tigo.com.gt/application: mock-api
        app.tigo.com.gt/owner: dsd
        app.tigo.com.gt/project: digital
        app.tigo.com.gt/environment: prod
        app.tigo.com.gt/version: v1.0.0
        app.tigo.com.gt/release: stable
        app.tigo.com.gt/tier: backend
    spec:
      containers:
        - image: registry.hiperion-scr.tigo.com.gt/apis/mock-api-scr:77824c85d0c02adc10b0f933d2e04c16111d3a2b
          ports:
            - name: http
              containerPort: 8080
          imagePullPolicy: IfNotPresent
          name: mock-api-scr
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "378Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        node.tigo.com.gt/digital: "true"
